force-app/main/default/objects/Team__c/fields/lineUp__c.field-meta.xml
<CustomField>
    <fullName>lineUp__c</fullName>
    <label>LineUp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-4-2</fullName>
            </value>
            <value>
                <fullName>3-4-3</fullName>
            </value>
            <value>
                <fullName>3-5-2</fullName>
            </value>
            <value>
                <fullName>3-6-1</fullName>
            </value>
            <value>
                <fullName>4-3-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>