force-app/main/default/objects/Team__c/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <formula>IMAGE( logo_url__c , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>logo</label>
    <type>Text</type>
</CustomField>