force-app/main/default/objects/Team__c/fields/logo_url__c.field-meta.xml
<CustomField>
    <fullName>logo_url__c</fullName>
    <label>logo_url</label>
    <type>Url</type>
</CustomField>