force-app/main/default/objects/Team__c/fields/Players__c.field-meta.xml
<CustomField>
    <fullName>Players__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Players</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>